# Metamorphic

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  ReadMe.md  WindowsMake.md  sandbox_env.bat
Morphic/include/Morphic/: Application.h  Core.h  Morphic.h  Test.h  pch.h
Morphic/include/Morphic/Core/: EntryPoint.hpp
Morphic/include/Morphic/Display/: Win32Window.h  Window.h
Morphic/include/Morphic/Logger/: TerminalLogger.h
Morphic/include/Morphic/Math/: Mat4x4.hpp  Mathf.hpp  Quaternion.hpp  UDim2.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
Morphic/include/Morphic/Objects/: Component.h  GameObject.h  Transform.h
Morphic/include/Morphic/Rendering/: RendererAPI.h
Morphic/include/Morphic/Rendering/RenderAPIS/: OpenGLRenderer.h
Morphic/include/Morphic/Scene/: Scene.h
Morphic/src/: Application.cpp  Component.cpp  Scene.cpp  TerminalLogger.cpp  Test.cpp  Time.cpp  Window.cpp  pch.cpp
SandboxApp/src/: SandboxApp.cpp  Test.cpp
editor/: CMakeLists.txt
examples/SandboxApp/: CMakeLists.txt  CMakePresets.json
examples/SandboxApp/src/: Main.cpp
hub/: CMakeLists.txt
hub/src/: Main.cpp
include/: Metamorphic.h
include/Metamorphic/: EntryPoint.h  pch.h
include/Metamorphic/Assets/: AssetManager.h
include/Metamorphic/Core/: Application.h  Core.h  Logger.h  PlatformDetection.h  Time.h
include/Metamorphic/Core/Event/: Event.h  EventDispatcher.h  EventType.h  ThreadEventHandler.cpp  ThreadEventHandler.h  ThreadEventRelay.h
include/Metamorphic/Core/Event/Events/: ApplicationExitEvent.h  OnBeforeApplicationExitEvent.h
include/Metamorphic/Core/Memory/: DynamicBaseQueue.hpp  DynamicBaseStack.hpp  Heap.hpp  HeapPool.hpp  OPtr.h  TypeHeap.hpp
include/Metamorphic/Core/Objects/: Component.h  GameObject.h  Transform.h
include/Metamorphic/Core/Objects/Components/: Camera.h
include/Metamorphic/Core/Time/: Stopwatch.h  Timer.h
include/Metamorphic/Particles/: Particle.h  ParticleSystem.h
include/Metamorphic/Physics/: IPhysicsAPI.h
include/Metamorphic/Platform/Physics/PhysX/: PhysXPhysics.h
include/Metamorphic/Platform/Renderers/: DirectX12Renderer.h  MetalRenderer.h  OpenGLRenderer.h  VulkanRenderer.h
include/Metamorphic/Platform/Renderers/Mesh/Buffers/OpenGL/: OGLVAOBuffer.h
include/Metamorphic/Platform/Rendering/Mesh/Buffers/OpenGL/: OGLVAOBuffer.h
include/Metamorphic/Platform/Rendering/Renderers/: DirectX12Renderer.h  MetalRenderer.h  OpenGLRenderer.h  VulkanRenderer.h
include/Metamorphic/Platform/Rendering/Shaders/: DirectX12Shader.h  MetalShader.h  OpenGLShader.h  VulkanShader.h
include/Metamorphic/Platform/Rendering/Textures/: Texture.h
include/Metamorphic/Platform/Window/: WindowsWindow.h
include/Metamorphic/Rendering/: IRenderAPI.h  IWindow.h  WindowProps.h
include/Metamorphic/Rendering/Gui/: ScreenGui.h
include/Metamorphic/Rendering/Mesh/: BasicMesh.h  IMesh.h  TexturedMeshData.h
include/Metamorphic/Rendering/Mesh/Buffers/: BufferData.h  IGPUBuffer.h
include/Metamorphic/Rendering/Mesh/GPUData/: IMeshGPUData.h
include/Metamorphic/Rendering/Mesh/MeshData/: BufferTypes.h  IMeshData.h  MeshData.h  TexturedMeshData.h
include/Metamorphic/Rendering/Shader/: Shader.h
include/Metamorphic/Rendering/Shader/Data/: ShaderData.h
include/Metamorphic/Resources/: ResourceManager.h  Resources.h
include/Metamorphic/SceneManagement/: Scene.h  SceneManager.h
libs/glew/include/GL/: glxew.h  wglew.h
scripts/: ForceReset.bat  GenerateProjectBuild.py
src/: Application.cpp  pch.cpp
src/Assets/: AssetManager.cpp
src/Core/: Application.cpp  Logger.cpp  Time.cpp
src/Core/Event/: ThreadEventHandler.cpp
src/Core/Objects/: Component.cpp  GameObject.cpp  Transform.cpp
src/Core/Time/: BasicTimer.cpp  Stopwatch.cpp
src/Physics/: IPhysicsAPI.cpp
src/Platform/Physics/PhysX/: PhysXPhysics.cpp
src/Platform/Renderers/: DirectX12Renderer.cpp  MetalRenderer.cpp  OpenGLRenderer.cpp  VulkanRenderer.cpp
src/Platform/Renderers/Mesh/Buffers/OpenGL/: OGLVAOBuffer.cpp
src/Platform/Rendering/Renderers/: DirectX12Renderer.cpp  MetalRenderer.cpp  OpenGLRenderer.cpp  VulkanRenderer.cpp
src/Platform/Rendering/Shader/: DirectX12Shader.cpp  MetalShader.cpp  OpenGLShader.cpp  VulkanShader.cpp
src/Platform/Window/: WindowsWindow.cpp
src/Rendering/: IRenderAPI.cpp  IWindow.cpp  WindowProps.cpp
src/Rendering/Mesh/: BasicMesh.cpp  IMesh.cpp  IMeshData.cpp
src/Rendering/Mesh/Buffers/: IGPUBuffer.cpp
src/Rendering/Mesh/MeshData/: MeshData.cpp  TexturedMeshData.cpp
src/Rendering/Shader/: Shader.cpp
src/Rendering/Shader/Data/: ShaderData.cpp
src/Resources/: ResourceManager.cpp
src/SceneManagement/: Scene.cpp  SceneManager.cpp
